# Team-Paper

./: README.md  pyproject.toml  report_template.md
src/dr_music/: __init__.py  cli.py  model.py  seed.py  utils.py
tests/: test_model.py  test_utils.py
